--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 	box-sizing: border-box;
     }
 h1{
-    font-size: 46px;
+    font-size: 76px;
 }
 * {
     margin: 0;
@@ -62,7 +62,7 @@ header > h1 {
 }
 .result {
     font-size: 40px;
-    color: white;
+    color: rgb(255, 255, 255);
 
 }
 .result > p {
@@ -74,7 +74,7 @@ header > h1 {
     text-align: center;
 }
 .choice {
-    border: 4px solid #f7f7f7;
+    border: 7px solid #ffffff;
     border-radius: 50%;
     padding: 10px;
     margin: 0 20px;
@@ -83,9 +83,11 @@ header > h1 {
 }
 
 .choice:hover {
+    border: rgb(246, 255, 0) !important;
+    border-radius: 222%;
     cursor: pointer;
     background: rgb(20, 17, 107);
-    animation:    
+    
 }
 .green-back:hover{
     cursor: pointer;
@@ -94,6 +96,7 @@ header > h1 {
 .draw-back:hover{
     cursor: pointer;
     background: gray;
+    
 }
 .red-back:hover{
     cursor: pointer;
@@ -105,4 +108,12 @@ header > h1 {
     font-weight: bold;
     font-size: 55px;
     margin-top: 20px;
+}
+img { transition: all 0.3s ease-in-out 0s; }
+
+img:hover
+{
+    cursor: default;
+    transform: rotate(360deg);
+    transition: all 0.4s ease-in-out 0s;
 }
